# ragtrace-lite

./: .coverage.SYui-MacBookPro.local.66923.XhCFDckx  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ASYNC_ISSUE_DETAILED_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  Dockerfile  HCX_RAGAS_INTEGRATION_SUMMARY.md  INSTALLATION.md  LICENSE  MODEL_ARCHITECTURE_GUIDE.md  OFFLINE_DEPLOYMENT.md  RAGAS_METRICS_ANALYSIS.md  README.md  README_KO.md  SETUP.md  config.yaml  coverage.xml  docker-compose.yml  download_bge_m3_windows.py  evaluation_log.txt  fix_report_generator.py  install_offline.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-full.txt  requirements-offline.txt  requirements.txt  test_check_prompts.py  test_debug_faithfulness.py  test_detailed_evaluation.py  test_full_pipeline.py  test_hcx_cli.py  test_hcx_stability_report.py  (+7 more)
ragtrace-lite-v2/: .env.example  .gitignore  DASHBOARD_V2_FEATURES.md  FINAL_TESTING_SUMMARY.md  PROBLEM_FIXES_SUMMARY.md  README.md  create_sample_data.py  create_test_data.py  dashboard.py  debug_questions.py  final_test.py  generate_html_report.py  generate_korean_report.py  init_tables.py  install.bat  install.sh  pyproject.toml  requirements-windows.txt  requirements.txt  run_dashboard.py  run_test.sh  setup.py  start_dashboard.py  test_dashboard_ui.html  test_fixes.html  test_rag_data_20250809_015227.xlsx  upload_and_evaluate.py
ragtrace-lite-v2/backup/: embeddings_adapter.py  manager_original.py
ragtrace-lite-v2/backup/20250810/: ragtrace.db.145701
ragtrace-lite-v2/backup/old_tests/: create_test_data.py  debug_api.py  test_dashboard.py  test_dashboard_refactor.py  test_integration.py  test_phase_8_integration.py  test_pydantic_models.py  test_rate_limiter.py  test_schema_fix.py  test_unified_config.py  test_upload_workflow.py
ragtrace-lite-v2/data/: sample_ragas_dataset.xlsx
ragtrace-lite-v2/docs/: DEVELOPMENT.md  OFFLINE_DEPLOYMENT.md  STATISTICAL_ANALYSIS_GUIDE.md
ragtrace-lite-v2/scripts/: collect_wheels.py  prepare_offline.sh
ragtrace-lite-v2/src/ragtrace_lite/: __main__.py  cli.py
ragtrace-lite-v2/src/ragtrace_lite/config/: config_loader.py  config_models.py  logging_setup.py
ragtrace-lite-v2/src/ragtrace_lite/core/: __init__.py  adaptive_evaluator.py  embeddings.py  embeddings_adapter.py  evaluator.py  llm_adapter.py  rate_limiter.py
ragtrace-lite-v2/src/ragtrace_lite/dashboard/: app.py  services.py
ragtrace-lite-v2/src/ragtrace_lite/db/: crud_operations.py  manager.py  schema.py
ragtrace-lite-v2/src/ragtrace_lite/report/: generator.py  (+3 more)
(+139 files in other folders)
